2007-04-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-mainichi.el (shimbun-mainichi-group-table): Add eye
	and kansai groups; move eye.* except eye.shasetsu, kansai.sanshi,
	keizai.*, kokusai.*, kurashi.* and science.* groups to
	shimbun-mainichi-subgroups-alist.
	(shimbun-mainichi-subgroups-alist): Add some subgroups; use
	shimbun-mainichi-header-regexp-default for the default.
	(shimbun-mainichi-content-start): Update.
	(shimbun-mainichi-get-headers): Follow group-table change.
	(shimbun-mainichi-prepare-article): Ditto.

2007-04-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-mainichi.el (shimbun-mainichi-group-table): Move
	entertainment.* groups to himbun-mainichi-subgroups-alist.
	(shimbun-mainichi-subgroups-alist): New variable.
	(shimbun-mainichi-get-headers): Work for subgroups.

2007-04-16  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-itmedia.el (shimbun-itmedia-group-alist): Use rss for
	anchordesk group.
	(shimbun-index-url): Simplify.
	(shimbun-headers): Remove.

	* shimbun/sb-impress.el (shimbun-impress-groups-alist):
	Add kaden group.

2007-04-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-yomiuri.el (shimbun-yomiuri-group-table): Add
	kyoiku.children, kyoiku.english, kyoiku.qanda, kyoiku.renaissance
	and kyoiku.special groups; move obit group to
	shimbun-yomiuri-subgroups-alist.
	(shimbun-yomiuri-subgroups-alist): Add subgroups for kyoiku*,
	national and sports groups.
	(shimbun-yomiuri-get-headers): Reverse group names in Message-ID.
	(shimbun-yomiuri-get-headers-kyoiku-renaissance): New function.
	(shimbun-get-headers): Use it.

2007-04-16  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* shimbun/sb-pcweb-column.el: Add comment(Author)
	(shimbun-pcweb-column-groups): Add new groups and move obsolete
	groups.
	(shimbun-get-headers): Fix index url regexp pattern.
	(shimbun-make-contents): Fix author and date regexp pattern.

2007-04-14  Naohiro Aota  <nao.aota@gmail.com>
